# Quyll

./: .eslintrc.cjs  index.html  package-lock.json  package.json  test-parse.js  tsconfig.json  update_entities.cjs  vite.config.ts
.github/workflows/: build-android.yml
docs/: Architecture Guide v1.0.md  DEVELOPMENT_RULES.md  Database Schema v1.0.md  Product Specification v1.0.md  UI UX Bible v1.0.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: index.ts
src/components/Button/: Button.css  Button.tsx
src/components/Card/: Card.css  (+1 more)
src/database/: appDatabase.ts  databaseService.ts  index.ts  migrations.ts  projectDatabase.ts  schema.ts
src/hooks/: index.ts  useCrud.ts  useErrorRecovery.ts  useProjectDb.ts  useProjectDb.tsx  useSearch.ts  useSort.ts
src/layouts/: AppLayout.css  AppLayout.tsx  HomeLayout.css  HomeLayout.tsx  InspectorPanel.css  InspectorPanel.tsx  NavigationSidebar.css  NavigationSidebar.tsx
src/routes/: AppRouter.tsx
src/services/: backupService.ts  entityService.ts  exportService.ts  grammarService.ts  graphService.ts  htmlToMarkdown.ts  imageService.ts  importService.ts  keywordService.ts  relationshipService.ts  searchService.ts  thesaurusService.ts  trashService.ts
src/store/: layoutStore.ts  projectStore.ts  themeStore.ts
src/styles/: animations.css  global.css  redesign.css  reset.css  variables.css
src/types/: common.ts  database.ts  dictionaries.d.ts
src/utils/: uuid.ts
(+225 files in other folders)
